# global-illumination

./: CMakeLists.txt  README.md
configs/: a01.json  a02_ggx.json  a02_imp.json  a02_phong.json  a02_spz_ggx.json  a03.json  a03_sibenik.json  a03_sunset.json  a04_box.json  a04_box_naive.json  a04_fireplace.json  a04_fireplace_naive.json  a04_mis.json  a04_pots.json  a04_pots_naive.json  a04_sibenik.json  a04_sibenik_naive.json  a04_spz.json  a04_spz_naive.json  a05_box.json  a05_cloud_march.json  a05_cloud_track.json  a05_sibenik.json  a05_sibenik_smoke.json  a05_smoke_debug.json  a05_spz.json
configs/extra/: extra_bedroom.json  extra_bedroom_lightcuts.json  extra_box_lightcuts.json  extra_fireplace_lightcuts.json  extra_pavillon.json  extra_pavillon_night.json  extra_veach_ajar.json  extra_veach_bidir.json
src/algorithms/: bidirectional.cpp  brdf_imp.cpp  direct.cpp  manylights.cpp  naive_pathtracer.cpp  pathtracer.cpp  photonmapping.cpp  simple.cpp  volpath.cpp  volume_debug.cpp
src/algorithms/lightcuts/: lc_aabb.h  lc_kdtree.h  lc_light_tree.cpp  lc_light_tree.h  lc_print.h  lc_virtual_light.h  lightcuts.cpp
src/driver/: context.cpp  context.h  main.cpp  quad.cpp  quad.h  render.cpp  render.h
src/driver/emscripten/: emscripten_mainloop_stub.h
src/gi/: algorithm.h  bdpt.cpp  bdpt.h  brdf.cpp  brdf.h  buffer.h  camera.cpp  camera.h  color.h  distribution.cpp  distribution.h  framebuffer.cpp  framebuffer.h  fresnel.h  hit.cpp  hit.h  json11.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  par_shapes.h  random.h  ray.h  rng.h  sampling.h  scene.cpp  scene.h  texture.cpp  texture.h  timer.cpp  timer.h  volume.cpp  volume.h
